--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
     <title>Document</title>
   </head>
   <body>
@@ -38,14 +45,14 @@
     </div>
     <div class="portada">
       <img src="/img/Tela.jpg" alt="" />
-    </div>
-    <div class="texto-portada">
-      <h1>CAMBIAMOS NUESTRO ESTILO</h1>
-      <p>
-        Y con ello vienen nuevos materiales, descuentos y sorpresas entra aqui
-        para descubrilos.
-      </p>
-      <input type="submit" value="No te arrepentiras" />
+      <div class="texto-portada">
+        <h1>CAMBIAMOS NUESTRO ESTILO</h1>
+        <p>
+          Y con ello vienen nuevos materiales, descuentos y sorpresas entra aqui
+          para descubrilos.
+        </p>
+        <input type="submit" value="No te arrepentiras" />
+      </div>
     </div>
     <section>
       <div class="seccion-uno">
@@ -101,40 +108,72 @@
           <h2>Proveemos a empresas como:</h2>
         </div>
         <div class="cartas">
-            <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-              <div class="carta">
-                <h4>empresa</h4>
-                <img src="/img/emblema.png" alt="" />
-              </div>
-            </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
+          <div class="carta">
+            <h4>empresa</h4>
+            <img src="/img/emblema.png" alt="" />
+          </div>
         </div>
+      </div>
     </section>
+    <footer>
+      <div class="contenedor">
+        <div class="redes">
+          <h3>Siguenos en nuestras redes sociales.</h3>
+          <div class="iconos">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-twitter"></i>
+          </div>
+        </div>
+        <div class="contacto">
+          <h3>Puedes contactarnos en las lineas.</h3>
+          <p><i class="fas fa-phone-alt"></i> (032)1234567</p>
+          <p><i class="fas fa-phone-alt"></i> (032)1234567</p>
+          <h3>Tambien por Whatsapp o Telegram</h3>
+          <p><i class="fab fa-whatsapp"></i> (3xx)1234567</p>
+          <p><i class="fab fa-telegram-plane"></i> (3xx)1234567</p>
+        </div>
+        <div class="correo">
+          <h3>Dejanos tus datos y nos contactaremos contigo.</h3>
+          <div class="datos">
+            <h4><i class="fas fa-user-tie"></i> Nombre:</h4>
+            <input type="text" placeholder=" introduce tu nombre">
+            <h4><i class="fas fa-at"></i> Correo:</h4>
+            <input type="email" placeholder=" introduce tu email">
+            <h4><i class="fas fa-phone-alt"></i> telefono:</h4>
+            <input type="number" placeholder=" introduce tu telefono">
+            <input class="boton-enviar" type="submit">
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
